@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Do not mention Term::ReadKey in docs
+    - Add Term::Size::Any to test report
+
 0.000069  2017-03-16 20:57:43-07:00 America/Los_Angeles
 
     - No changes from trial
